--- a/spec/visual/templates/index.erb
+++ b/spec/visual/templates/index.erb
@@ -1,16 +1,17 @@
 <style type="text/css">
-  code {
-    font-size: 14px;
-  }
   main {
-    display: flex;
-    flex-direction: row;
+    padding: 15px;
+    column-count: 2;
+    -webkit-column-count: 2;
+    -moz-column-count: 2;
   }
   .preview {
-    padding: 16px;
+    display: inline-block;
+    margin-bottom: 15px;
+    padding: 15px;
     width: 100%;
     color: <%= @comment_color %>;
-    border: 0.5px dotted;
+    border: 1px dotted;
     break-inside: avoid-column;
     -webkit-column-break-inside: avoid;
   }
